--- a/lesson2/task3/css/style.css
+++ b/lesson2/task3/css/style.css
@@ -21,7 +21,7 @@ h1 {
           flex: 1 1 40%;
 }
 
-p {
+div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,6 +35,18 @@ p {
   font-size: 1.5rem;
 }
 
-p label {
+div .dop {
+  border-top: 2px solid silver;
+}
+
+div label {
   line-height: 2rem;
+}
+
+div label span {
+  font-size: 1rem;
+}
+
+.btn {
+  margin: 5px;
 }
