--- a/lesson2/task3/css/style.scss
+++ b/lesson2/task3/css/style.scss
@@ -14,13 +14,25 @@ h1 {
     }
 }
 
-p {
+div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 1.5rem;
 
+    .dop {
+        border-top: 2px solid silver;
+    }
+
     label {
         line-height: 2rem;
+
+        span {
+            font-size: 1rem;
+        }
     }
+}
+
+.btn {
+    margin: 5px;
 }
