--- a/lesson3/lesson3/css/style.css
+++ b/lesson3/lesson3/css/style.css
@@ -1,39 +1,44 @@
-body{
-    font-family: 'SF Pro Display', sans-serif;
+body {
+    font-family: "SF Pro Display", sans-serif;
 }
-header{
+header {
     display: flex;
     background-color: #2f2a2d;
     justify-content: space-between;
     color: #fafafa;
     padding: 30px 80px;
+    position: relative;
 }
-button{
+button {
     outline: none;
 }
-.logo{
-
+.logo {
     text-transform: uppercase;
     font-weight: bold;
 }
-.btn-cart{
+.btn-cart {
     background-color: #fafafa;
     padding: 10px 20px;
     border: 1px solid transparent;
     color: #2f2a2d;
     border-radius: 5px;
-    transition: all ease-in-out .4s;
+    transition: all ease-in-out 0.4s;
     cursor: pointer;
 }
-.btn-cart:hover{
+.btn-cart:hover {
     background-color: transparent;
     border-color: #fafafa;
     color: #fafafa;
 }
-.btn-cart, .logo{
+.btn-cart,
+.logo {
     align-self: center;
 }
-.products{
+.btn-cart sup {
+    font-weight: 700;
+    color: rgb(235, 142, 21);
+}
+.products {
     column-gap: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
@@ -44,7 +49,7 @@ button{
 p {
     margin: 0 0 5px 0;
 }
-.product-item{
+.product-item {
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -54,24 +59,67 @@ p {
 }
 img {
     max-width: 100%;
-    height: auto
+    height: auto;
 }
 .desc {
     border: 1px solid #c0c0c040;
-    padding: 15px
+    padding: 15px;
 }
-.buy-btn{
+.buy-btn {
     margin-top: 5px;
     background-color: #2f2a2d;
     padding: 10px 20px;
     border: 1px solid transparent;
     color: #fafafa;
     border-radius: 5px;
-    transition: all ease-in-out .4s;
+    transition: all ease-in-out 0.4s;
     cursor: pointer;
 }
-.buy-btn:hover{
+.buy-btn:hover {
     background-color: transparent;
     border-color: #2f2a2d;
     color: #2f2a2d;
+}
+
+.back-hiden {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.cart-list {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.4);
+    padding: 10px;
+    top: 73px;
+    right: 20px;
+}
+
+.visible {
+    display: flex;
+}
+
+.product-row {
+    display: grid;
+    grid-template-columns: 100px 200px repeat(3, 100px);
+    align-items: center;
+    text-align: center;
+}
+
+.cart-list > .header {
+    font-weight: 700;
+    margin: 5px;
+}
+
+.product-row input[type="number"] {
+    width: 3rem;
 }
