--- a/lesson4/lesson4/project/css/style.css
+++ b/lesson4/lesson4/project/css/style.css
@@ -1,36 +1,36 @@
-body{
-    font-family: 'SF Pro Display', sans-serif;
+body {
+    font-family: "SF Pro Display", sans-serif;
 }
-header{
+header {
     display: flex;
     background-color: #2f2a2d;
     justify-content: space-between;
     color: #fafafa;
     padding: 30px 80px;
 }
-button:focus{
+button:focus {
     outline: none;
 }
-.logo{
-
+.logo {
     text-transform: uppercase;
     font-weight: bold;
 }
-.btn-cart{
+.btn-cart {
     background-color: #fafafa;
     padding: 10px 20px;
     border: 1px solid transparent;
     color: #2f2a2d;
     border-radius: 5px;
-    transition: all ease-in-out .4s;
+    transition: all ease-in-out 0.4s;
     cursor: pointer;
 }
-.btn-cart:hover{
+.btn-cart:hover {
     background-color: transparent;
     border-color: #fafafa;
     color: #fafafa;
 }
-.btn-cart, .logo{
+.btn-cart,
+.logo {
     align-self: center;
 }
 /*.products {*/
@@ -39,7 +39,7 @@ button:focus{
 /*flex-wrap: wrap;*/
 /*padding: 40px 80px;*/
 /*}*/
-.products{
+.products {
     column-gap: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
@@ -50,7 +50,7 @@ button:focus{
 p {
     margin: 0 0 5px 0;
 }
-.product-item{
+.product-item {
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -60,16 +60,16 @@ p {
 }
 img {
     max-width: 100%;
-    height: auto
+    height: auto;
 }
 .desc {
     border: 1px solid #c0c0c040;
-    padding: 15px
+    padding: 15px;
 }
-.cart{
+.cart {
     position: relative;
 }
-.cart-block{
+.cart-block {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 5px;
     box-sizing: border-box;
@@ -82,11 +82,8 @@ img {
     width: 300px;
 }
 
-.invisible{
-    display: none;
-}
-.cart-block:before{
-    content: '';
+.cart-block:before {
+    content: "";
     width: 0;
     height: 0;
     position: absolute;
@@ -97,17 +94,19 @@ img {
     border-bottom: 10px solid white;
 }
 
-.buy-btn, .del-btn{
+.buy-btn,
+.del-btn {
     margin-top: 5px;
     background-color: #2f2a2d;
     padding: 5px 15px;
     border: 1px solid transparent;
     color: #fafafa;
     border-radius: 5px;
-    transition: all ease-in-out .4s;
+    transition: all ease-in-out 0.4s;
     cursor: pointer;
 }
-.buy-btn:hover, .del-btn:hover{
+.buy-btn:hover,
+.del-btn:hover {
     background-color: #fafafa;
     color: #2f2a2d;
     border: 1px solid #2f2a2d;
@@ -116,31 +115,31 @@ img {
     display: flex;
     justify-content: space-between;
 }
-.cart-item:not(:last-child){
+.cart-item:not(:last-child) {
     margin-bottom: 20px;
 }
-.product-bio{
+.product-bio {
     display: flex;
 }
-.cart-item img{
+.cart-item img {
     align-self: flex-start;
     margin-right: 15px;
 }
-.product-single-price{
+.product-single-price {
     color: #474747;
     font-size: 0.5em;
 }
-.product-price{
+.product-price {
     margin-left: 30px;
 }
-.product-desc{
+.product-desc {
     max-width: 150px;
 }
 .product-quantity {
     margin-top: 15px;
     font-size: 0.75em;
 }
-.right-block{
+.right-block {
     text-align: right;
 }
 .btn-search {
@@ -152,12 +151,12 @@ img {
     bottom: 5px;
     right: 0;
 }
-.search-form{
+.search-form {
     position: relative;
     margin-right: 50px;
     display: inline-block;
 }
-.search-field:focus{
+.search-field:focus {
     outline: none;
 }
 .search-field {
@@ -168,4 +167,43 @@ img {
     background-color: transparent;
     border: none;
     border-bottom: 2px solid #fafafa;
+}
+
+.btn-menu {
+    color: #fafafa;
+    text-decoration: none;
+    font-weight: bold;
+    align-self: center;
+}
+.btn-menu:hover {
+    text-decoration: underline;
+}
+.feedback-form {
+    background-color: white;
+    box-shadow: 2px 2px 4px 3px rgba(0, 0, 0, 0.62);
+    position: fixed;
+    top: 110px;
+    right: 20px;
+    bottom: 20px;
+    left: 20px;
+}
+#feedback {
+    display: flex;
+    flex-direction: column;
+    padding-top: 150px;
+}
+#feedback input,
+#feedback textarea,
+#feedback button {
+    margin: 20px 20%;
+    line-height: 2rem;
+}
+#feedback button {
+    line-height: 2rem;
+}
+.invisible {
+    display: none;
+}
+.err {
+    border: 2px solid red;
 }
